# surrealdb-axum

./: Cargo.toml  LICENCE  LICENSE  README.md
src/: api.rs  error.rs  main.rs
src/api/: dummy_routes.rs  task_routes.rs
src/service/: task.rs
