[package]
name = "axum-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-graphql = "6"
# async-graphql-axum = "6"
axum = "0.6"
chrono = "0.4"
jsonwebtoken = "8"
once_cell = "1.18.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = { version = "1", features = ["kv-mem"] }
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.9"
tower-http = { version = "0.4", features = ["full"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
anyhow = "1.0.81"
env_logger = "0.11.3"